--- a/client/src/component/home/detail/Detail.less
+++ b/client/src/component/home/detail/Detail.less
@@ -1,12 +1,28 @@
-.home-article-detail{
+.home-article-detail {
   flex: 1;
   margin: 0 16px;
 
-  .ant-card-body{
+  .ant-card-body {
     height: 100%;
+    .ant-card-meta-title {
+      font-size: 35px;
+    }
+    .ant-card-meta-description {
+      font-size: 20px;
+    }
+    .ant-avatar-image {
+      height: 70px;
+      width: 70px;
+    }
   }
 
-  .anticon  {
+  .anticon {
     margin-right: 5px;
+  }
+
+  .ant-card-actions {
+    span {
+      font-size: 25px;
+    }
   }
 }
