--- a/client/src/component/login/Login.less
+++ b/client/src/component/login/Login.less
@@ -1,5 +1,13 @@
  .login-form {
-  max-width: 300px;
+  max-width: 500px;
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   height: 30%;
+   width: 50%;
+   margin: auto;
 }
  .login-form-button {
   width: 100%;
