--- a/client/src/component/home/articleList/ArticleList.less
+++ b/client/src/component/home/articleList/ArticleList.less
@@ -1,4 +1,18 @@
 .home-article-list {
   flex: 1;
   margin: 0 16px;
+
+  .ant-list-item-meta-title{
+      font-size:28px;
+  }
+
+  .ant-list-item-meta-description{
+    text-indent:30px;
+    font-size:19px;
+    line-height: 200%;
+  }
+
+  .ant-list-item-action li {
+    font-size: 20px;
+  }
 }
