--- a/client/src/component/login/Login.less
+++ b/client/src/component/login/Login.less
@@ -1,14 +1,32 @@
- .login-form {
+.login-form {
   max-width: 500px;
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   right: 0;
-   left: 0;
-   height: 30%;
-   width: 50%;
-   margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 30%;
+  width: 50%;
+  margin: auto;
+  .ant-form-item-children {
+
+    .ant-checkbox-wrapper {
+      font-size: 18px;
+    }
+    .ant-input-prefix {
+      font-size: 20px;
+    }
+    input {
+      height: 50px;
+      font-size: 23px;
+      padding-left: 45px !important;
+    }
+
+  }
 }
- .login-form-button {
+
+.login-form-button {
   width: 100%;
+  height: 50px;
+  font-size: 23px;
 }
