--- a/client/src/component/home/detail/Detail.less
+++ b/client/src/component/home/detail/Detail.less
@@ -5,10 +5,12 @@
   .ant-card-body {
     height: 100%;
     .ant-card-meta-title {
-      font-size: 35px;
+      font-size: 38px;
     }
     .ant-card-meta-description {
-      font-size: 20px;
+      text-indent: 62px;
+      font-size: 33px;
+      line-height: 200%;
     }
     .ant-avatar-image {
       height: 70px;
